# apertium-hbs-slv

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  adverbs-neosnovniki-prevedeno.txt  apertium-sh-sl.sh-sl.dix  apertium-sh-sl.sh-sl.rlx  apertium-sh-sl.sh-sl.t1x  apertium-sh-sl.sh.metadix  apertium-sh-sl.sl-sh.rlx  apertium-sh-sl.sl-sh.t1x  configure.ac  modes.xml  paradigm-test.sh
dev/: inconsistency-summary.sh  inconsistency.sh  missing-words.sh  sh_original.txt  sl_original.txt  story_Pavao1_HR_original.txt  testvoc-summary.sh-sl.txt  testvoc-summary.sl-sh.txt  testvoc.sh
dev/eval/: errors_story1.txt  errors_story2.txt  story1_hr.txt  story1_sl.txt  story1_sl_uncorrected.txt  story1_sl_uncorrected_google.txt  story2_sl.txt
dev/eval/sh-sl/: translate.sh
dev/paper/lrec2014_version/: design.tex  development.tex  transfer.tex
dev/paper/mtsxiv_version/: design.tex  development.tex
dev/slides/: src.tex
test/: hbs-slv-biltrans-expected.txt  hbs-slv-disam-expected.txt  hbs-slv-generator-expected.txt  hbs-slv-input.txt  hbs-slv-interchunk-expected.txt  hbs-slv-morph-expected.txt  hbs-slv-postchunk-expected.txt  slv-hbs-biltrans-expected.txt  slv-hbs-disam-expected.txt  slv-hbs-generator-expected.txt  slv-hbs-input.txt  slv-hbs-interchunk-expected.txt  slv-hbs-morph-expected.txt  slv-hbs-postchunk-expected.txt  slv-hbs-pretransfer-expected.txt  tests.json
